--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@svgr/webpack": "^6.2.1",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "next-seo": "^5.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.51.0",
