--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-seo": "^5.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-intersection-observer": "^9.1.0",
     "sass": "^1.51.0",
     "swiper": "^8.1.4"
   },
